--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.13",
+    "@mui/lab": "^5.0.0-alpha.169",
     "@mui/material": "^5.15.13",
     "@tanstack/react-query": "4.10.1",
+    "axios": "^1.6.8",
     "fontawesome-free": "^1.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "6.4.1",
     "web-vitals": "^3.5.2"
   }
