--- a/package.json
+++ b/package.json
@@ -32,11 +32,15 @@
     "@tanstack/react-query": "4.10.1",
     "axios": "^1.6.8",
     "fontawesome-free": "^1.0.4",
+    "framer-motion": "^11.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-google-recaptcha": "^3.1.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "6.4.1",
+    "sweetalert2": "^11.10.7",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^3.5.2"
   }
 }
